--- a/ui-templates/css/light.style.css
+++ b/ui-templates/css/light.style.css
@@ -20,6 +20,7 @@ background: #fff;
 
 
 input[type=submit], input[type=button], .force_button_style {
+  border: 1px solid black;
   background-color: #808080;
 }
 
