--- a/ui-templates/css/style.css
+++ b/ui-templates/css/style.css
@@ -208,7 +208,12 @@ margin-bottom: 10px;
 
 
 .green_bright {
-color: #0bb200 !important;
+color: #10d602 !important;
+}
+
+
+.red_bright {
+color: #ff4747 !important;
 }
 
 
