--- a/ui-templates/css/dark.style.css
+++ b/ui-templates/css/dark.style.css
@@ -26,7 +26,7 @@ background-color: #dbd9d9;
 
 
 input[type=submit], input[type=button], .force_button_style {
-  border: 1px solid white;
+  border: 1px solid #999999;
   background-color: #42484e;
 }
 
