--- a/ui-templates/css/style.css
+++ b/ui-templates/css/style.css
@@ -73,6 +73,7 @@ input[type=submit], input[type=button], .force_button_style {
   text-decoration: none;
   display: inline-block;
   cursor: pointer;
+  border-radius: 6px;
 }
 
 
@@ -84,6 +85,7 @@ text-decoration: underline;
 fieldset {
     width: auto;
     padding: 25px; /* To give a bit of padding on the left and right */
+  border-radius: 8px;
 }
 
 legend {
@@ -257,17 +259,18 @@ border: 2px solid #808080;
 
 
 .tabli a {
-border-top-left-radius: 4px;
-border-top-right-radius: 4px;
+border-top-left-radius: 8px;
+border-top-right-radius: 8px;
 font-size: 21px;
 }
 
 
 .tabdiv {
-border-top-left-radius: 4px;
-border-top-right-radius: 4px;
-border-bottom-left-radius: 4px;
-border-bottom-right-radius: 4px;
+border-top-left-radius: 15px !important;
+border-top-right-radius: 15px !important;
+border-bottom-left-radius: 15px !important;
+border-bottom-right-radius: 15px !important;
+border-collapse: separate !important;
 }
 
 
@@ -363,7 +366,7 @@ right: 0px;
 
 .chart_wrapper {
 position: relative;
-border-radius: 5px;
+border-radius: 8px;
 }
 
 
@@ -382,20 +385,20 @@ position: relative;
 float: right;
 max-width: 30%;
 margin: 0px;
-font-size: 13px;
+font-size: 11px;
 }
 
 
 #system_stats fieldset {
 padding: 8px;
-font-size: 13px;
+font-size: 11px;
 border: 1px solid #dd7c0d; 
 }
 
 
 #system_stats fieldset legend {
 padding: 4px;
-font-size: 13px;
+font-size: 11px;
 }
 
 
@@ -445,7 +448,7 @@ padding: 6px;
 }
 
 
-#alert_source, #percent_change_amount, #percent_change_time, #percent_change_alert_type, #show_chart_settings {
+#alert_source, #percent_change_amount, #percent_change_time, #percent_change_alert_type, #show_chart_settings, #show_system_charts {
 display: none;
 }
 
