--- a/ui-templates/css/style.css
+++ b/ui-templates/css/style.css
@@ -448,7 +448,7 @@ padding: 6px;
 }
 
 
-#alert_source, #percent_change_amount, #percent_change_time, #percent_change_alert_type, #show_chart_settings, #show_system_charts {
+#alert_source, #percent_change_amount, #percent_change_time, #percent_change_alert_type, #show_chart_settings, #show_system_charts, #show_access_stats {
 display: none;
 }
 
