--- a/templates/interface/css/style.css
+++ b/templates/interface/css/style.css
@@ -444,7 +444,21 @@ IDs
 ////////////////////////////// */
 
 
+#body_loading {
+display: block;
+width: 100%; 
+min-width: 1200px; 
+margin: auto;
+font-weight: bold;
+font-size: 29px;
+background-color: #a8a6a6;
+border: 2px dotted #808080;
+padding: 5px;
+}
+
+
 #body_wrapper {
+display: none;
 width: 100%; 
 min-width: 1200px; 
 margin: auto;
@@ -474,14 +488,14 @@ font-size: 11px;
 }
 
 
-#loading_charts {
+#loading_subsections {
 display: none;
 font-weight: bold;
 font-size: 19px;
 background-color: #a8a6a6;
 border: 2px dotted #808080;
 padding: 5px;
-margin: 5px;
+margin: auto;
 }
 
 
