--- a/templates/interface/css/style.css
+++ b/templates/interface/css/style.css
@@ -128,6 +128,13 @@ CLASSES
 ////////////////////////////// */
 
 
+.chart_wrapper span.chart_loading {
+font-weight: bold;
+font-size: 18px;
+line-height: 26px;
+}
+
+
 .clear_both {
 clear: both;
 }
