--- a/templates/interface/css/light.style.css
+++ b/templates/interface/css/light.style.css
@@ -171,6 +171,12 @@ border-top: 2px solid black;
 }
 
 
+.modaal-container, .accordion .card {
+    color: #000 !important;
+    background: #ededea !important;
+}
+
+
 /* //////////////////////////////
 IDs
 ////////////////////////////// */
