--- a/templates/interface/css/light.admin.css
+++ b/templates/interface/css/light.admin.css
@@ -28,6 +28,12 @@ text-decoration: none;
 }
 
 
+.nav-tabs-vertical .nav-link {
+color: #fff;
+background: #808080;
+}
+
+
 /* //////////////////////////////
 IDs
 ////////////////////////////// */
