--- a/templates/interface/css/dark.style.css
+++ b/templates/interface/css/dark.style.css
@@ -176,13 +176,48 @@ border-top: 2px solid white;
 }
 
 
-.modaal-container, .accordion .card {
+.modaal-container {
     color: #fff !important;
     background: #202020 !important;
+}
+
+
+.card-body {
+    color: #fff !important;
+    background: #4f4f4f !important;
+}
+
+
+.card-header {
+    background: #2d2d2d !important;
 }
 
 
 /* //////////////////////////////
 IDs
 ////////////////////////////// */
+
+
+#body_top_nav .navbar-nav .dropdown-menu {
+background: #ccc7c7 !important;
+border: 2px solid white !important;
+}
+
+
+#body_top_nav .navbar-nav .dropdown-menu a:link, #body_top_nav .navbar-nav .dropdown-menu a:visited {
+color: black;
+}
+
+
+#body_top_nav .navbar-nav .dropdown-item:hover {
+background-color: #ccc7c7 !important;
+color: #666464 !important;
+}
+
+
+#body_top_nav .navbar-nav .dropdown-item.active {
+background-color: #606060 !important;
+color: white !important;
+border-radius: 3px;
+}
 
