--- a/templates/interface/css/style.css
+++ b/templates/interface/css/style.css
@@ -16,7 +16,7 @@ padding: 0px;
 
 
 body {
-margin: 15px;
+margin: 0px;
 width: auto;
 }
 
@@ -126,6 +126,11 @@ legend {
 /* //////////////////////////////
 CLASSES
 ////////////////////////////// */
+
+
+.card {
+    border: 1px solid #808080 !important;
+}
 
 
 .chart_wrapper span.chart_loading {
@@ -330,8 +335,8 @@ border: 2px solid #808080;
 
 
 .tabli a {
-border-top-left-radius: 8px;
-border-top-right-radius: 8px;
+border-top-left-radius: 10px;
+border-top-right-radius: 10px;
 font-size: 21px;
 }
 
@@ -348,11 +353,14 @@ border-collapse: separate !important;
 .tabs li {
 list-style: none;
 display: inline;
+margin-right: 2px;
 }
 
 
 .tabs a {
-padding: 5px 10px;
+padding: 8px;
+padding-left: 18px;
+padding-right: 18px;
 display: inline-block;
 text-decoration: none;
 }
@@ -416,9 +424,9 @@ max-width: 1200px;
 }
 
 
-.max_1700px_wrapper {
+.max_1350px_wrapper {
 position: relative;
-max-width: 1700px;
+max-width: 1350px;
 }
 
 
@@ -462,8 +470,8 @@ border: 3px dotted #dd7c0d;
 border-radius: 30px;
 padding: 5px;
 margin: auto;
-margin-top: 15px;
-margin-bottom: 15px;
+margin-top: 21px;
+margin-bottom: 21px;
 }
 
 
@@ -474,16 +482,19 @@ IDs
 
 #loading_subsections {
 display: none;
+margin-top: 0px;
 font-size: 19px;
 }
 
 
 #body_top_nav {
+position: relative;
 display: block;
 width: 100%; 
 min-width: 1200px; 
 white-space: nowrap;
 margin: auto;
+padding-top: 8px;
 }
 
 
@@ -504,6 +515,8 @@ display: none;
 width: 100%; 
 min-width: 1200px; 
 margin: auto;
+padding: 15px;
+padding-top: 0px;
 }
 
 
@@ -568,5 +581,31 @@ padding: 6px;
 #alert_source, #percent_change_amount, #percent_change_filter, #percent_change_time, #percent_change_alert_type, #show_chart_settings, #show_system_charts, #show_access_stats {
 display: none;
 }
+
+
+#body_top_nav .navbar-expand-lg {
+width: fit-content;
+margin: auto;
+}
+
+
+#body_top_nav .navbar-nav .dropdown-menu a:link, #body_top_nav .navbar-nav .dropdown-menu a:visited {
+padding: 10px;
+font-size: 21px;
+text-decoration: none;
+}
+
+
+#body_top_nav .navbar-nav {
+position: relative;
+bottom: 5px;
+}
+
+
+#body_top_nav .dropdown-item {
+	text-align: center;
+padding: 7px;
+}
+
 
 
