--- a/templates/interface/css/style.css
+++ b/templates/interface/css/style.css
@@ -602,7 +602,7 @@ display: none;
 }
 
 
-#body_top_nav .navbar-expand-lg {
+#body_top_nav .navbar-expand {
 display: inline-block;
 margin: auto;
 }
