--- a/templates/interface/css/dark.style.css
+++ b/templates/interface/css/dark.style.css
@@ -151,7 +151,7 @@ color: #ce7039 !important;
 
 
 .blue, td.blue, td.blue span.blue, td select, .btn-link, .btn-link a, .btn-link:hover {
-color: #23aeea !important;
+color: #28b2ed !important;
 }
 
 
