CSS styling revisions
CSS styling revisions

--- a/templates/interface/css/dark.style.css
+++ b/templates/interface/css/dark.style.css
@@ -193,6 +193,11 @@ border-top: 2px solid white;
 }
 
 
+.image_border {
+border: 2px solid #d4d8d3; 
+}
+
+
 /* //////////////////////////////
 IDs
 ////////////////////////////// */
