--- a/templates/interface/css/style.css
+++ b/templates/interface/css/style.css
@@ -202,6 +202,11 @@ text-align: right;
 }
 
 
+.rounded {
+border-radius: 8px;
+}
+
+
 .image_border {
 border-radius: 15px;
 }
@@ -625,7 +630,7 @@ padding: 6px;
 }
 
 
-#alert_source, #percent_change_amount, #percent_change_filter, #percent_change_time, #percent_change_alert_type, #show_chart_settings, #show_system_charts, #show_access_stats {
+#alert_source, #percent_change_amount, #percent_change_filter, #percent_change_time, #percent_change_alert_type, #show_chart_settings, #show_system_charts, #show_visitor_stats {
 display: none;
 }
 
