--- a/templates/interface/css/admin.css
+++ b/templates/interface/css/admin.css
@@ -21,11 +21,8 @@ CLASSES
 }
 
 
-.tab-content div {
-padding-top: 3px;
-padding-left: 13px;
-padding-right: 15px;
-padding-bottom: 10px;
+.tab-content > div {
+padding: 20px !important;
 }
 
 
@@ -38,7 +35,7 @@ padding-bottom: 10px;
 	 border-bottom-right-radius: 8px;
 	 border-bottom-left-radius: 8px;
     display: block;
-    min-height: 900px;
+    min-height: 1100px;
 }
 
 
