--- a/templates/interface/css/style.css
+++ b/templates/interface/css/style.css
@@ -134,6 +134,13 @@ pre {
  white-space: -pre-wrap;      /* Opera 4-6 */
  white-space: -o-pre-wrap;    /* Opera 7 */
  word-wrap: break-word;       /* Internet Explorer 5.5+ */
+background-color: #f0f0f0;
+margin: 0px;
+}
+
+
+code {
+padding-top: 1em !important;
 }
 
 
