--- a/templates/interface/css/style.css
+++ b/templates/interface/css/style.css
@@ -136,11 +136,13 @@ pre {
  word-wrap: break-word;       /* Internet Explorer 5.5+ */
 background-color: #f0f0f0;
 margin: 0px;
+padding: .5em !important;
 }
 
 
 code {
-padding-top: 1em !important;
+padding: 0em !important;
+margin: 0px;
 }
 
 
