--- a/templates/interface/css/dark.style.css
+++ b/templates/interface/css/dark.style.css
@@ -140,6 +140,11 @@ color: #ff4747 !important;
 }
 
 
+#charts_error, #system_charts_error {
+border: 4px dotted #ff4747;
+}
+
+
 .red_dotted {
 padding: 10px;
 border: 2px dotted #ff4747 !important;
