--- a/templates/interface/css/style.css
+++ b/templates/interface/css/style.css
@@ -537,6 +537,11 @@ margin-right: auto;
 }
 
 
+.chart_reload {
+top: 150px;
+}
+
+
 /* //////////////////////////////
 IDs
 ////////////////////////////// */
@@ -624,7 +629,6 @@ font-size: 11px;
 #charts_error, #system_charts_error {
 display: none;
 font-weight: bold;
-border: 4px dotted #808080;
 padding: 9px;
 margin: 20px;
 }
