UX / lite chart revisions
UX / lite chart revisions

--- a/templates/interface/css/dark.style.css
+++ b/templates/interface/css/dark.style.css
@@ -220,6 +220,11 @@ border: 2px solid #d4d8d3;
 }
 
 
+.countdown_notice {
+background: #202020;
+}
+
+
 /* //////////////////////////////
 IDs
 ////////////////////////////// */
