--- a/templates/interface/css/light.style.css
+++ b/templates/interface/css/light.style.css
@@ -215,6 +215,11 @@ border: 2px solid #606060;
 }
 
 
+.countdown_notice {
+background: #f2f2f2;
+}
+
+
 /* //////////////////////////////
 IDs
 ////////////////////////////// */
